--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,6 +5,7 @@
 tasks:
   - init: npm install
   - init: sudo apt update
+  - init: sudo apt -y upgrade
   - init: npm install -y @angular/cli
   - init: npm install --global typescript
   - init: npm link @angular/cli
